--- a/src/component/header.css
+++ b/src/component/header.css
@@ -2,27 +2,49 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 2rem;
-    background-color: #f5f5f5;
-    border-bottom: 1px solid #ccc;
+    padding: 2.5rem 8rem;
+    margin-top: 4rem;
   }
   
-  header div {
-    font-size: 1.5rem;
-    font-weight: bold;
-  }
-  
-  nav {
-    display: flex;
-    gap: 1.5rem;
-  }
-  
-  nav a {
+  .header-logo {
+    font-size: 3.6rem;
     text-decoration: none;
-    color: #333;
+    color: #E0CEA0;
+  }
+  
+  .header-content {
+    display: flex;
+    gap: 10px;
+  }
+
+  .header-nav {
+    display: flex;
+    gap: 2.6rem;
+    margin-right: 10rem;
+    align-items: center;
+  }
+  
+  .header-nav a {
+    text-decoration: none;
+    color: #FFFFFF;
     font-weight: 500;
+    font-size: 2rem;
   }
   
   nav a:hover {
     color: #0077cc;
   }
+
+  .user-money {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+  }
+
+  .user-money p {
+    color: #FFFFFF;
+    font-size: 2rem;
+  }
+  
+
+
