--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
 html {
+    margin: 0;
+    padding: 0;
     height: 100vh;
-    background-color: #152837;
+    background: radial-gradient(circle, #1C4362, #000000);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
