--- a/src/component/button.css
+++ b/src/component/button.css
@@ -33,7 +33,7 @@ button::before {
     color: white;
     display: flex;
     justify-content: center;
-    transition: transform 0.3s ease; /* Asegura transición suave */
+    transition: transform 0.3s ease;
 }
 
 .button-corner {
@@ -43,13 +43,13 @@ button::before {
     z-index: 10;
     width: 17px;
     height: auto;
-    transition: transform 0.3s ease; /* Transición para el SVG */
+    transition: transform 0.3s ease; 
     transform-origin: top right;
 }
 
 /* Primary */
 
-button {
+button.primary {
     background-image: linear-gradient(45deg, transparent 0%, #BAEFFB 0% calc(100% - 18px), transparent calc(100% - 18px));
 
     &::before {
@@ -57,7 +57,7 @@ button {
     }
 
     & .button-corner {
-        color: #BAEFFB;              /* dar color al corner*/
+        color: #BAEFFB; 
     }
 
     &:not(.disabled):hover {
@@ -66,8 +66,8 @@ button {
     }
 
     &:hover .button-corner {
-        transform: scale(1.5); /* Hace que el SVG crezca más que el botón */
-        filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.2)); /* Sombra en el SVG */
+        transform: scale(1.5);
+        filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.2)); 
     }
 
     &:hover::before {
@@ -85,7 +85,7 @@ button.secondary {
     }
 
     & .button-corner {
-        color: #E0CEA0;               /* dar color al corner*/
+        color: #E0CEA0; 
     }
 
     & .button-content {
@@ -98,7 +98,7 @@ button.secondary {
     }
 
     &:hover .button-corner {
-        transform: scale(1.5); /* Hace que el SVG crezca más que el botón */
+        transform: scale(1.5); 
         filter: drop-shadow(0 0 1rem #ffffff8e );
     }
 
@@ -117,7 +117,7 @@ button.succes {
     }
 
     & .button-corner {
-        color: #4AD45A;                /* dar color al corner*/
+        color: #4AD45A;
     }
 
     & .button-content .button-corner {
@@ -130,7 +130,7 @@ button.succes {
     }
 
     &:hover .button-corner {
-        transform: scale(1.5); /* Hace que el SVG crezca más que el botón */
+        transform: scale(1.5); 
         filter: drop-shadow(0 0 1rem #ffffff8e );
     }
 
@@ -149,7 +149,7 @@ button.error {
     }
 
     & .button-corner {
-        color: #FC0606;                  /* dar color al corner*/
+        color: #FC0606;
     }
 
     & .button-content .button-corner {
@@ -162,7 +162,7 @@ button.error {
     }
 
     &:hover .button-corner {
-        transform: scale(1.5); /* Hace que el SVG crezca más que el botón */
+        transform: scale(1.5);
         filter: drop-shadow(0 0 1rem #ffffff8e );
     }
 
@@ -238,20 +238,20 @@ button.info {
 /* Sizes */
 
 .button.sm {
-    min-width: 180px;
-    padding: 12px 16px;
+    height: 32px;
+    padding: 0 16px;
     font-size: 12px;
 }
 
 .button.md {
-    min-width: 246px;
-    padding: 20px 24px;
+    height: 56px;
+    padding: 0 24px;
     font-size: 20px;
 }
 
 .button.lg {
-    min-width: 346px;
-    padding: 28px 30px;
+    height: 68px;
+    padding: 0 30px;
     font-size: 24px;
 }
 
@@ -267,19 +267,14 @@ button.disabled .button-content {
 
 button.disabled {
     background-image: linear-gradient(45deg, transparent 0%, #736F6F 0% calc(100% - 18px), transparent calc(100% - 18px));
-    cursor: not-allowed;
+    pointer-events: none;
 }
 
 button.disabled::before {
     opacity: 0.6;
-    pointer-events: none; /*  Esto evita cualquier interacción */
-    filter: none; /* Elimina sombras, si tenés hover activo */
-    transform: none; /* Evita efectos de transformación */
     background-image: linear-gradient(45deg, transparent 0%, #f5f3f3 0% calc(100% - 18px), transparent calc(100% - 18px));   
 }
 
-.disabled:hover, 
-.disabled:hover .button-corner {
-    transform: none;
-    filter: none;
+.button-container:has(.button.disabled) {
+    cursor: not-allowed;
 }
