stylee: font family

--- a/src/components/hyrule-card/hyruleCard.css
+++ b/src/components/hyrule-card/hyruleCard.css
@@ -177,7 +177,7 @@
     color: #B99F65;
     font-family: 'title';
     padding-top: 0.8rem;
-    font-family: "Irish Grover";
+    font-family: "Inknut Antiqua", serif;
     font-weight: 600;
     font-style: normal;
     line-height: 0.3;
