--- a/src/component/button.css
+++ b/src/component/button.css
@@ -47,13 +47,52 @@ button::before {
     transform-origin: top right;
 }
 
+/* Sizes */
+
+.button.sm {
+    --cut-size: var(--cut-size-sm);
+    height: 32px;
+    padding: 0 16px;
+    font-size: 12px;
+
+    & .button-corner {
+        width: 10px;
+    }
+
+    &:hover .button-corner {
+        transform: scale(1.5);
+    }
+}
+
+.button.md {
+    --cut-size: var(--cut-size-md);
+    height: 56px;
+    padding: 0 24px;
+    font-size: 20px;
+}
+
+.button.lg {
+    --cut-size: var(--cut-size-lg);
+    height: 68px;
+    padding: 0 30px;
+    font-size: 24px;
+
+    & .button-corner {
+        width: 24px;
+    }
+
+    &:hover .button-corner {
+        transform: scale(1.4);
+    }
+}
+
 /* Primary */
 
 button.primary {
-    background-image: linear-gradient(45deg, transparent 0%, #BAEFFB 0% calc(100% - 18px), transparent calc(100% - 18px));
+    background-image: linear-gradient(45deg, transparent 0%, #BAEFFB 0% calc(100% - var(--cut-size)), transparent calc(100% - var(--cut-size)));
 
     &::before {
-        background-image: linear-gradient(45deg, transparent 0%, #275880 0% calc(100% - 18px), transparent calc(100% - 18px));
+        background-image: linear-gradient(45deg, transparent 0%, #275880 0% calc(100% - var(--cut-size)), transparent calc(100% - var(--cut-size)));
     }
 
     & .button-corner {
@@ -62,7 +101,7 @@ button.primary {
 
     &:not(.disabled):hover {
         filter: drop-shadow(0 0 1rem #ffffff8e );
-        background-image: linear-gradient(45deg, transparent 0%, #BAEFFB 0% calc(100% - 22px), transparent calc(100% - 22px));
+        background-image: linear-gradient(45deg, transparent 0%, #BAEFFB 0% calc(100% - calc(var(--cut-size) + 4px)), transparent calc(100% - calc(var(--cut-size) + 4px)));
     }
 
     &:hover .button-corner {
@@ -71,17 +110,17 @@ button.primary {
     }
 
     &:hover::before {
-        background-image: linear-gradient(45deg, transparent 0%, #275880 0% calc(100% - 22px), transparent calc(100% - 22px));
+        background-image: linear-gradient(45deg, transparent 0%, #275880 0% calc(100% - calc(var(--cut-size) + 4px)), transparent calc(100% - calc(var(--cut-size) + 4px)));
     }
 }
 
 /* Secondary */
 
 button.secondary {
-    background-image: linear-gradient(45deg, transparent 0%, #F8EED5 0% calc(100% - 18px), transparent calc(100% - 18px));
+    background-image: linear-gradient(45deg, transparent 0%, #F8EED5 0% calc(100% - var(--cut-size)), transparent calc(100% - var(--cut-size)));
 
     &::before {
-        background-image: linear-gradient(45deg, transparent 0%, #E0CEA0 0% calc(100% - 18px), transparent calc(100% - 18px));
+        background-image: linear-gradient(45deg, transparent 0%, #E0CEA0 0% calc(100% - var(--cut-size)), transparent calc(100% - var(--cut-size)));
     }
 
     & .button-corner {
@@ -93,7 +132,7 @@ button.secondary {
     }
 
     &:not(.disabled):hover {
-        background-image: linear-gradient(45deg, transparent 0%, #F8EED5 0% calc(100% - 22px), transparent calc(100% - 22px));
+        background-image: linear-gradient(45deg, transparent 0%, #F8EED5 0% calc(100% - calc(var(--cut-size) + 4px)), transparent calc(100% - calc(var(--cut-size) + 4px)));
         filter: drop-shadow(0 0 1rem #ffffff8e );
     }
 
@@ -103,17 +142,17 @@ button.secondary {
     }
 
     &:hover::before {
-        background-image: linear-gradient(45deg, transparent 0%, #E0CEA0 0% calc(100% - 22px), transparent calc(100% - 22px));
+        background-image: linear-gradient(45deg, transparent 0%, #E0CEA0 0% calc(100% - calc(var(--cut-size) + 4px)), transparent calc(100% - calc(var(--cut-size) + 4px)));
     }
 }
 
 /* Succes */
 
 button.succes {
-    background-image: linear-gradient(45deg, transparent 0%, #206127 0% calc(100% - 18px), transparent calc(100% - 18px));
+    background-image: linear-gradient(45deg, transparent 0%, #206127 0% calc(100% - var(--cut-size)), transparent calc(100% - var(--cut-size)));
 
     &::before {
-        background-image: linear-gradient(45deg, transparent 0%, #4AD45A 0% calc(100% - 18px), transparent calc(100% - 18px));
+        background-image: linear-gradient(45deg, transparent 0%, #4AD45A 0% calc(100% - var(--cut-size)), transparent calc(100% - var(--cut-size)));
     }
 
     & .button-corner {
@@ -125,7 +164,7 @@ button.succes {
     }
 
     &:hover {
-        background-image: linear-gradient(45deg, transparent 0%, #206127 0% calc(100% - 22px), transparent calc(100% - 22px));
+        background-image: linear-gradient(45deg, transparent 0%, #206127 0% calc(100% - calc(var(--cut-size) + 4px)), transparent calc(100% - calc(var(--cut-size) + 4px)));
         filter: drop-shadow(0 0 1rem #ffffff8e );
     }
 
@@ -135,17 +174,17 @@ button.succes {
     }
 
     &:hover::before {
-        background-image: linear-gradient(45deg, transparent 0%, #4AD45A 0% calc(100% - 22px), transparent calc(100% - 22px));
+        background-image: linear-gradient(45deg, transparent 0%, #4AD45A 0% calc(100% - calc(var(--cut-size) + 4px)), transparent calc(100% - calc(var(--cut-size) + 4px)));
     }
 }
 
 /* Error */
 
 button.error {
-    background-image: linear-gradient(45deg, transparent 0%, #000000 0% calc(100% - 18px), transparent calc(100% - 18px));
+    background-image: linear-gradient(45deg, transparent 0%, #ac0606 0% calc(100% - var(--cut-size)), transparent calc(100% - var(--cut-size)));
 
     &::before {
-        background-image: linear-gradient(45deg, transparent 0%, #FC0606 0% calc(100% - 18px), transparent calc(100% - 18px));
+        background-image: linear-gradient(45deg, transparent 0%, #FC0606 0% calc(100% - var(--cut-size)), transparent calc(100% - var(--cut-size)));
     }
 
     & .button-corner {
@@ -158,7 +197,7 @@ button.error {
 
     &:hover {
         filter: drop-shadow(0 0 1rem #ffffff8e );
-        background-image: linear-gradient(45deg, transparent 0%, #000000 0% calc(100% - 22px), transparent calc(100% - 22px));
+        background-image: linear-gradient(45deg, transparent 0%, #ac0606 0% calc(100% - calc(var(--cut-size) + 4px)), transparent calc(100% - calc(var(--cut-size) + 4px)));
     }
 
     &:hover .button-corner {
@@ -167,17 +206,17 @@ button.error {
     }
 
     &:hover::before {
-        background-image: linear-gradient(45deg, transparent 0%, #FC0606 0% calc(100% - 22px), transparent calc(100% - 22px));
+        background-image: linear-gradient(45deg, transparent 0%, #FC0606 0% calc(100% - calc(var(--cut-size) + 4px)), transparent calc(100% - calc(var(--cut-size) + 4px)));
     }
 }
 
 /* Warning */
 
 button.warning {
-    background-image: linear-gradient(45deg, transparent 0%, #000000 0% calc(100% - 18px), transparent calc(100% - 18px));  /* dar color al borde*/
+    background-image: linear-gradient(45deg, transparent 0%, #9b4f0c 0% calc(100% - var(--cut-size)), transparent calc(100% - var(--cut-size)));  /* dar color al borde*/
 
     &::before {
-        background-image: linear-gradient(45deg, transparent 0%, #FD7E14 0% calc(100% - 18px), transparent calc(100% - 18px)); /* dar color al fondo del boton*/
+        background-image: linear-gradient(45deg, transparent 0%, #FD7E14 0% calc(100% - var(--cut-size)), transparent calc(100% - var(--cut-size))); /* dar color al fondo del boton*/
     }
 
     & .button-corner {
@@ -190,7 +229,7 @@ button.warning {
 
     &:hover {
         filter: drop-shadow(0 0 1rem #ffffff8e );
-        background-image: linear-gradient(45deg, transparent 0%, #000000 0% calc(100% - 22px), transparent calc(100% - 22px));
+        background-image: linear-gradient(45deg, transparent 0%, #9b4f0c 0% calc(100% - calc(var(--cut-size) + 4px)), transparent calc(100% - calc(var(--cut-size) + 4px)));
     }
 
     &:hover .button-corner {
@@ -199,17 +238,17 @@ button.warning {
     }
 
     &:hover::before {
-        background-image: linear-gradient(45deg, transparent 0%, #FD7E14 0% calc(100% - 22px), transparent calc(100% - 22px));   /* dar color al borde con hover */
+        background-image: linear-gradient(45deg, transparent 0%, #FD7E14 0% calc(100% - calc(var(--cut-size) + 4px)), transparent calc(100% - calc(var(--cut-size) + 4px)));   /* dar color al borde con hover */
     }
 }
 
 /* Info */
 
 button.info {
-    background-image: linear-gradient(45deg, transparent 0%, #000000 0% calc(100% - 18px), transparent calc(100% - 18px));
+    background-image: linear-gradient(45deg, transparent 0%, #0a616e 0% calc(100% - var(--cut-size)), transparent calc(100% - var(--cut-size)));
 
     &::before {
-        background-image: linear-gradient(45deg, transparent 0%, #17A2B8 0% calc(100% - 18px), transparent calc(100% - 18px));
+        background-image: linear-gradient(45deg, transparent 0%, #17A2B8 0% calc(100% - var(--cut-size)), transparent calc(100% - var(--cut-size)));
     }
 
     & .button-corner {
@@ -221,7 +260,7 @@ button.info {
     }
 
     &:hover {
-        background-image: linear-gradient(45deg, transparent 0%, #000000 0% calc(100% - 22px), transparent calc(100% - 22px));
+        background-image: linear-gradient(45deg, transparent 0%, #0a616e 0% calc(100% - calc(var(--cut-size) + 4px)), transparent calc(100% - calc(var(--cut-size) + 4px)));
         filter: drop-shadow(0 0 1rem #ffffff8e );
     }
 
@@ -231,28 +270,8 @@ button.info {
     }
 
     &:hover::before {
-        background-image: linear-gradient(45deg, transparent 0%, #17A2B8 0% calc(100% - 22px), transparent calc(100% - 22px));
+        background-image: linear-gradient(45deg, transparent 0%, #17A2B8 0% calc(100% - calc(var(--cut-size) + 4px)), transparent calc(100% - calc(var(--cut-size) + 4px)));
     }
-}
-
-/* Sizes */
-
-.button.sm {
-    height: 32px;
-    padding: 0 16px;
-    font-size: 12px;
-}
-
-.button.md {
-    height: 56px;
-    padding: 0 24px;
-    font-size: 20px;
-}
-
-.button.lg {
-    height: 68px;
-    padding: 0 30px;
-    font-size: 24px;
 }
 
 /* Disabled */
