--- a/src/components/store-opening/StoreOpening.css
+++ b/src/components/store-opening/StoreOpening.css
@@ -1,5 +1,6 @@
 .cards-container {
     display: flex;
+    flex-direction: row;
     gap: 1rem;
     justify-content: center;
     flex-wrap: wrap;
