feature: css header background styles

--- a/src/component/header.css
+++ b/src/component/header.css
@@ -4,94 +4,10 @@ header {
   align-items: center;
   padding: 2.5rem 8rem;
   margin: 4rem 2.7rem 0rem 2.7rem;
- 
+  background: rgba(39, 88, 128, 0.1); 
   position: relative;
-  }
+}
  
-/*  BORDES VERTICALES  */
-
-/* Izquierda: arriba */
-header::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 1px;
-  height: 25%;
-  background-color: #7CD2FF;
-}
-
-/* Izquierda: abajo */
-header::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 1px;
-  height: 25%;
-  background-color: #7CD2FF;
-}
-
-/* Derecha: arriba y abajo */
-header .right-line-top,
-header .right-line-bottom {
-  position: absolute;
-  right: 0;
-  width: 1px;
-  height: 25%;
-  background-color: #7CD2FF;
-}
-
-header .right-line-top {
-  top: 0;
-}
-
-header .right-line-bottom {
-  bottom: 0;
-}
-
-/*  BORDES HORIZONTALES  */
-
-/* Top left */
-header .top-line-left {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 18%; /* no llega al centro */
-  height: 1px;
-  background-color: #7CD2FF;
-}
-
-/* Top right */
-header .top-line-right {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 18%;
-  height: 1px;
-  background-color: #7CD2FF;
-}
-
-/* Bottom left */
-header .bottom-line-left {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 18%;
-  height: 1px;
-  background-color: #7CD2FF;
-}
-
-/* Bottom right */
-header .bottom-line-right {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 18%;
-  height: 1px;
-  background-color: #7CD2FF;
-}
-
 .header-logo {
   font-size: 3.6rem;
   text-decoration: none;
@@ -115,6 +31,7 @@ header .bottom-line-right {
   color: #FFFFFF;
   font-weight: 500;
   font-size: 2rem;
+  font-family: 'the wild breath of Zelda';
 }
 
 nav a:hover {
