Arreglo componentes interior(posibles cambios mas adelante)

--- a/src/assets/CardContainer/CardContainer.css
+++ b/src/assets/CardContainer/CardContainer.css
@@ -1,15 +1,26 @@
-* {
-  background-color: rgb(3, 3, 3);
-}
-
 /*=== Contenedor ===*/
-
 .card {
   position: relative;
-  width: 300px;
-  height: 200px;
+  min-height: 200px;
+  height: auto;
+  /*width: 100%;*/
+  max-width: 600px;
   overflow: hidden;
+  width: clamp(280px, 90%, 500px);
 }
+.card > div:last-child {
+  position: relative;
+  z-index: 2;
+  padding: 1.5rem;
+}
+.container {
+  padding: 100px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+  justify-content: center;
+}
+
 /* Fondo de imagen */
 .bg-image {
   position: absolute;
@@ -137,7 +148,7 @@
   position: absolute;
   width: 25px;
   height: 25px;
-  z-index: 2;
+  z-index: 3;
   pointer-events: none;
 }
 
