--- a/src/component/button.css
+++ b/src/component/button.css
@@ -8,7 +8,9 @@
     justify-content: center;
 }
 
-button {
+.button {
+    display: flex;
+    align-items: center;
     position: relative;
     background-color: white;
     border: none;
@@ -18,7 +20,7 @@ button {
     transition: transform 0.1s ease, box-shadow 0.3s ease, filter 0.6s ease;
 }
 
-button::before {
+.button::before {
     content: '';
     position: absolute;
     left: 2px;
@@ -89,7 +91,7 @@ button::before {
 
 /* Primary */
 
-button.primary {
+.button.primary {
     background-image: linear-gradient(45deg, transparent 0%, #BAEFFB 0% calc(100% - var(--cut-size)), transparent calc(100% - var(--cut-size)));
 
     &::before {
@@ -117,7 +119,7 @@ button.primary {
 
 /* Secondary */
 
-button.secondary {
+.button.secondary {
     background-image: linear-gradient(45deg, transparent 0%, #F8EED5 0% calc(100% - var(--cut-size)), transparent calc(100% - var(--cut-size)));
 
     &::before {
@@ -149,7 +151,7 @@ button.secondary {
 
 /* Succes */
 
-button.succes {
+.button.succes {
     background-image: linear-gradient(45deg, transparent 0%, #206127 0% calc(100% - var(--cut-size)), transparent calc(100% - var(--cut-size)));
 
     &::before {
@@ -181,7 +183,7 @@ button.succes {
 
 /* Error */
 
-button.error {
+.button.error {
     background-image: linear-gradient(45deg, transparent 0%, #ac0606 0% calc(100% - var(--cut-size)), transparent calc(100% - var(--cut-size)));
 
     &::before {
@@ -213,7 +215,7 @@ button.error {
 
 /* Warning */
 
-button.warning {
+.button.warning {
     background-image: linear-gradient(45deg, transparent 0%, #9b4f0c 0% calc(100% - var(--cut-size)), transparent calc(100% - var(--cut-size)));  /* dar color al borde*/
 
     &::before {
@@ -245,7 +247,7 @@ button.warning {
 
 /* Info */
 
-button.info {
+.button.info {
     background-image: linear-gradient(45deg, transparent 0%, #0a616e 0% calc(100% - var(--cut-size)), transparent calc(100% - var(--cut-size)));
 
     &::before {
@@ -277,20 +279,20 @@ button.info {
 
 /* Disabled */
 
-button.disabled .button-corner {
+.button.disabled .button-corner {
     color: #555252;
   }
 
-button.disabled .button-content {
+.button.disabled .button-content {
     color: #555252;
 }
 
-button.disabled {
+.button.disabled {
     background-image: linear-gradient(45deg, transparent 0%, #736F6F 0% calc(100% - 18px), transparent calc(100% - 18px));
     pointer-events: none;
 }
 
-button.disabled::before {
+.button.disabled::before {
     opacity: 0.6;
     background-image: linear-gradient(45deg, transparent 0%, #f5f3f3 0% calc(100% - 18px), transparent calc(100% - 18px));   
 }
