--- a/src/component/button.css
+++ b/src/component/button.css
@@ -11,7 +11,10 @@
 .button {
     display: flex;
     align-items: center;
+    justify-content: center;
     position: relative;
+    width: fit-content;
+    min-width: 160px;
     background-color: white;
     border: none;
     background-color: transparent;
@@ -57,6 +60,7 @@
     height: 32px;
     padding: 0 16px;
     font-size: 12px;
+    min-width: 100px;
 
     & .button-corner {
         width: 10px;
