--- a/src/components/CardContainer/CardContainer.css
+++ b/src/components/CardContainer/CardContainer.css
@@ -1,24 +1,28 @@
 /*=== Contenedor ===*/
 .card {
   position: relative;
-  min-height: 200px;
-  height: auto;
-  /*width: 100%;*/
-  max-width: 600px;
-  overflow: hidden;
   width: clamp(280px, 90%, 500px);
+  min-height: 200px;
+  min-width: 1000px;
+  overflow: visible;
 }
 .card > div:last-child {
   position: relative;
   z-index: 2;
   padding: 1.5rem;
 }
-.container {
-  padding: 100px;
+.card-content {
   display: flex;
   flex-wrap: wrap;
-  gap: 1.5rem;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 1rem;
+  padding: 1rem;
+  position: relative;
+  z-index: 2;
+  min-height: 100px;
+  box-sizing: border-box;
 }
 
 /* Fondo de imagen */
@@ -143,36 +147,40 @@
 /* === SVG === */
 
 /* SVGs, líneas, contenido en z-index superiores */
-.svg-corner {
-  background-color: transparent !important;
+.svg-wrapper {
   position: absolute;
-  width: 25px;
-  height: 25px;
+  width: 30px;
+  height: 30px;
   z-index: 3;
   pointer-events: none;
 }
 
-/* Esquinas y rotaciones */
-.svg-corner.top-left {
-  top: 0;
-  left: 0;
+.svg-icon {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.svg-wrapper.top-left {
+  top: -10px;
+  left: -10px;
   transform: rotate(90deg);
 }
 
-.svg-corner.top-right {
-  top: 0;
-  right: 0;
+.svg-wrapper.top-right {
+  top: -10px;
+  right: -10px;
   transform: rotate(180deg);
 }
 
-.svg-corner.bottom-left {
-  bottom: 0;
-  left: 0;
+.svg-wrapper.bottom-left {
+  bottom: -10px;
+  left: -10px;
   transform: rotate(0deg);
 }
 
-.svg-corner.bottom-right {
-  bottom: 0;
-  right: 0;
+.svg-wrapper.bottom-right {
+  bottom: -10px;
+  right: -10px;
   transform: rotate(270deg);
 }
