--- a/src/components/firebase/login/LoginForm.css
+++ b/src/components/firebase/login/LoginForm.css
@@ -1,5 +1,5 @@
 .success-message {
-    color: green;
+    color: #17f017;
     font-size: 1.2em;
     margin-top: 10px;
     text-align: center;
@@ -17,12 +17,21 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f7f7f7;
     font-family: Arial, sans-serif;
+  }
+
+  .login-container .button {
+    width: 100%;
+  }
+
+  .login-container h2 {
+    text-align: center;
+    margin-bottom: 1.5rem;
+    color: white;
+    font-size: 28px;
   }
   
 .login-form {
-    background-color: white;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -30,6 +39,7 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
+    border: 1px solid white;
 }
 
 .input-group {
@@ -40,7 +50,7 @@
 
 .input-group label {
     font-size: 14px;
-    color: #555;
+    color: white;
 }
 
 .input-group input {
@@ -55,28 +65,10 @@
     border-color: #5b55d6;
 }
 
-.login-button {
-    background-color: #6c63ff;
-    color: white;
-    border: none;
-    padding: 12px;
-    border-radius: 4px;
-    font-size: 16px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    }
-
-.login-button:hover {
-    background-color: #5a52d2;
-}
-
-.login-button:active {
-    background-color: #4a44a3;
-}
-
 .switch-form {
     margin-top: 20px;
-    font-size: 0.95rem;
+    color: white;
+    font-size: 12px;
   }
   
   .switch-form a {
