--- a/src/components/hyrule-card/hyruleCard.css
+++ b/src/components/hyrule-card/hyruleCard.css
@@ -58,11 +58,13 @@
     font-family: 'title';
     font-size: 0.82rem;
     margin-bottom: 0.1rem;
+    color: #f5e5c0;
 }
 
 .hyrule-card__type {
     display: flex;
     align-items: center;
+    margin-bottom: 0.3rem;
 }
 
 .hyrule-card__icon {
@@ -73,6 +75,9 @@
 
 .hyrule-card__header h2 {
     margin-block: 0;
+    font-size: 1.2rem;
+    color: #f5e5c0;
+    line-height: 0;
 }
 
 .hyrule-card__points {
@@ -149,7 +154,7 @@
 }
 
 .hyrule-card__section h3 {
-    font-weight: bold;
+    font-weight: 200;
     font-size: 1rem;
     font-family: 'title';
     margin: 0;
@@ -182,4 +187,5 @@
     font-weight: 600;
     font-style: normal;
     line-height: 0.3;
+    margin-bottom: 0.15rem;
 }
