--- a/src/components/chest-button/ChestButton.css
+++ b/src/components/chest-button/ChestButton.css
@@ -8,6 +8,12 @@
     align-items: center;
     width: 23.375rem;
     height: 40.5rem;
+    transition: transform 0.3s ease;
+}
+
+.chest-button:hover {
+    transform: scale(1.1);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
 }
 
 .chest-button h1, h2{
