--- a/src/components/store-main/StoreMain.css
+++ b/src/components/store-main/StoreMain.css
@@ -7,7 +7,7 @@
     margin-top: 4rem;
 }
 
-.store-main__text {
+.store-main__textbox__text {
     color: #7CD2FF;
     font-family: "Geist", sans-serif;
     font-optical-sizing: auto;
@@ -24,4 +24,10 @@
     gap: 1rem;
     margin-top: 1.8rem;
     justify-content: center;
+}
+
+.store-main__textbox__buttons {
+    display: flex;
+    margin-top: 2rem;
+    gap: 2.5rem
 }
