--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 html {
   background: radial-gradient(circle, #1C4362, #000000);
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
   margin: 0;
   padding: 0;
   min-height: 100vh;
