--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -420,3 +420,60 @@
   .button.outlined:hover .left-line-bottom {
     height: 50%;
   }
+
+  /* DropDown-Button */
+
+.dropdown-button {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.dropdown-button__options {
+    color: white;
+    width: fit-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 6px; 
+    margin-top: 16px;
+    opacity: 0;
+    transform: translateY(-10px);
+    visibility: hidden;
+    max-height: 0;
+    overflow: hidden;
+  
+    transition: opacity 0.3s ease, transform 0.3s ease, visibility 0.3s ease, max-height 0.3s ease;
+  }
+
+  .dropdown-button__options.open {
+    opacity: 1;
+    transform: translateY(0);
+    visibility: visible;
+    max-height: 500px; 
+  }
+  
+  .dropdown-button__option {
+    background-color: #275880; 
+    border: 1px solid #7CD2FF; 
+    color: white; 
+    padding: 8px 16px; 
+    text-align: center;
+    font-size: 14px; 
+    cursor: pointer;
+    width: 100%; 
+    height: 36px; 
+    transition: background-color 0.2s ease, border-color 0.2s ease;
+    font-weight: bold;
+  }
+
+  .dropdown-button__option:hover {
+    box-shadow: 0 0 8px 2px rgba(255, 255, 255, 0.7);
+    color: #275880; 
+    background-color: white; 
+
+  }
+
+  .dropdown-icon {
+    margin-left: 10px;
+  }
