--- a/src/components/collectionAll/collection-all.css
+++ b/src/components/collectionAll/collection-all.css
@@ -1,12 +1,37 @@
 .collection-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    justify-items: center;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr); 
     gap: 6rem;
-    padding: 44px;
-}
+    justify-items: center; 
+    padding: 0 84px;
+  }
 
 .hyrule-card__border:hover {
     cursor: pointer;
+}
+
+.cards-wrapped {
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.collection-page {
+    display: flex;
+    flex-direction: row;
+    margin-top: 6rem;
+    justify-content: space-between;
+    padding: 0;
+    position: relative;
+}
+
+
+.collection-page__buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+    padding-left: 20rem;
+    position: sticky;
+    top: 23rem;
+    height: fit-content;
+    margin-top: 5rem;
 }
