--- a/src/components/modalCard/modal-card.css
+++ b/src/components/modalCard/modal-card.css
@@ -4,29 +4,65 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0,0,0,0.6);
+    background: rgba(0,0,0,0.85);
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 999;
   }
   
-  .modal-content {
-    background-color: #0f213f;
-    border: 1px solid #7CD2FF;
-    padding: 24px;
-    border-radius: 8px;
-    max-width: 600px;
-    width: 90%;
-  }
-  
-  .modal-description {
-    margin-top: 12px;
-    font-size: 16px;
-    color: white;
-  }
+.modal-content {
+  height: calc(100vh - 200px);
+  display: flex;
+  align-items: center;
+  padding: 16px;
+}
 
-  .card-container-modal {
-    background-color: #0f213f;
+.modal-description {
+  font-size: 16px;
+  color: white;
+}
 
-  }
+.modal-content__text-btn > h1 {
+  font-size: 44px;
+  color: white;
+}
+
+.card-container-modal {
+  background-color: #0f213f;
+}
+
+.modal-content__card {
+  margin-inline: 88px 88px;
+}
+
+.modal-content__btn {
+  display: flex;
+  gap: 34px;   
+  justify-content: center;
+  padding-top: 24px;
+}
+
+.modal-content__text-btn{
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.zoomed-card-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  backdrop-filter: blur(4px);
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 2000; /* más alto que el modal */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.zoomed-card-content {
+  cursor: default;
+}
