--- a/src/components/CardContainer/CardContainer.css
+++ b/src/components/CardContainer/CardContainer.css
@@ -31,7 +31,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: url('assets/black 1.png') center/cover no-repeat;
+  background: url('src/assets/black 1.png') center/cover no-repeat;
   opacity: 0.2; /* Opacidad de la imagen */
   z-index: 0;
 }
